salesforce_sfdx/main/default/objects/IMS_Menu__mdt/IMS_Menu__mdt.object-meta.xml
<CustomObject>
    <description>IMS Menu User both GRS&amp;GLH</description>
    <label>IMS Menu</label>
    <pluralLabel>IMS Menus</pluralLabel>
</CustomObject>