salesforce_sfdx/main/default/objects/IMS_Menu__mdt/fields/French_Label__c.field-meta.xml
<CustomField>
    <fullName>French_Label__c</fullName>
    <description>IMS Menu French Label Value</description>
    <label>French Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>