salesforce_sfdx/main/default/objects/IMS_Menu__mdt/fields/icon__c.field-meta.xml
<CustomField>
    <fullName>icon__c</fullName>
    <description>Menu Icon</description>
    <label>icon</label>
    <length>100</length>
    <type>Text</type>
</CustomField>