salesforce_sfdx/main/default/objects/IMS_Menu__mdt/fields/Menu_Order__c.field-meta.xml
<CustomField>
    <fullName>Menu_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Menu Order based on Main and Sub Menu</description>
    <inlineHelpText>Give a order based on parentId and Count of Submenu Count</inlineHelpText>
    <label>Menu Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>