salesforce_sfdx/main/default/objects/IMS_Menu__mdt/fields/Menu_URL__c.field-meta.xml
<CustomField>
    <fullName>Menu_URL__c</fullName>
    <defaultValue>'ims-comingsoon'</defaultValue>
    <label>Menu URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>