salesforce_sfdx/main/default/objects/IMS_Menu__mdt/fields/Parent_Menu__c.field-meta.xml
<CustomField>
    <fullName>Parent_Menu__c</fullName>
    <defaultValue>'HEAD'</defaultValue>
    <description>Parent menu value</description>
    <inlineHelpText>Give a Parent menu value as a key to add to menu layer</inlineHelpText>
    <label>Parent Menu</label>
    <length>200</length>
    <type>Text</type>
</CustomField>