salesforce_sfdx/main/default/objects/IMS_Menu__mdt/fields/submenu_count__c.field-meta.xml
<CustomField>
    <fullName>submenu_count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>IMS Submenu Postion</description>
    <inlineHelpText>Give how many sub menus will be added, 0- Will be consider no Submenu</inlineHelpText>
    <label>submenu count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>