salesforce_sfdx/main/default/objects/IMS_Menu__mdt/fields/url__c.field-meta.xml
<CustomField>
    <fullName>url__c</fullName>
    <description>Menu URL</description>
    <label>url</label>
    <type>Url</type>
</CustomField>