salesforce_sfdx/main/default/objects/IMS_Menu__mdt/fields/UserType__c.field-meta.xml
<CustomField>
    <fullName>UserType__c</fullName>
    <description>IMS Menu User types</description>
    <label>UserType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GLH</fullName>
            </value>
            <value>
                <fullName>GRS</fullName>
            </value>
            <value>
                <fullName>Combo</fullName>
                <default>true</default>
                <label>Combo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>